# trackivity-v2

./: .bunfig.production.toml  .bunfig.toml  .dockerignore  .env.example  .gitignore  CLAUDE.md  DATABASE_IMPROVEMENTS.md  DATABASE_OPTIMIZED.md  Dockerfile  LEGACY_COMPATIBILITY.md  README-bun.md  README-npm.md  README.md  cloudbuild.yaml  deploy-cloud-run.md  deploy-podman.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  podman-compose.yml  svelte.config.js  tailwind.config.ts  test_flow_validation.md  vercel.json
backend/: Cargo.toml  Dockerfile  seed_admin.sh
backend/.sqlx/: query-9a0b9dbdd27bb3ccb0148ec16373a5c686073bbfe46f0672dc38494231a0544f.json
backend/migrations/: 20240101000000_init_schema.sql  20240324000000_add_notifications.sql  20250225000000_add_password_resets.sql  20260424000000_drop_unused_columns.sql  20260425000000_participations_user_registered_idx.sql
backend/src/: activities.rs  auth.rs  main.rs  models.rs  organizations.rs
backend/src/modules/: mod.rs
backend/src/modules/activities/: handlers.rs  models.rs
backend/src/modules/admins/: handlers.rs  models.rs
backend/src/modules/auth/: handlers.rs  models.rs
backend/src/modules/departments/: handlers.rs  models.rs
backend/src/modules/notifications/: handlers.rs  service.rs
backend/src/modules/organizations/: handlers.rs  models.rs
backend/src/modules/qr/: handlers.rs  models.rs
backend/src/modules/users/: handlers.rs  models.rs
database/: performance-guide.md
docs/: qr-scanner-enhancement-summary.md
frontend/: .dockerignore  .env.example  DATABASE_IMPROVEMENTS.md  DATABASE_OPTIMIZED.md  cloudbuild.yaml  (+7 more)
(+368 files in other folders)
