[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "time"] }
dotenvy = "0.15.7"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
rand = "0.10.1"
web-push = "0.11.0"
base64 = "0.22.1"
futures = "0.3.32"
reqwest = { version = "0.12.28", features = ["json"] }
